--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/IniciarMatriz.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/IniciarMatriz.cshtml
@@ -273,7 +273,7 @@
                             @*SOFTWARE*@
                             <div class="form-group row">
 
-                                <div class="col-md-2 col-sm-2">
+                                @*<div class="col-md-2 col-sm-2">
                                     <div class="col-md-12 col-sm-12">
                                         <div class="checkbox">
                                             <label>
@@ -281,7 +281,7 @@
                                             </label>
                                         </div>
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="col-md-2 col-sm-2">
                                     <div class="col-md-12 col-sm-12">
                                         <div class="checkbox">
