--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Create.cshtml
@@ -78,11 +78,37 @@
                             <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.numeroEmpleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
-                                <div class="col-md-1 col-sm-1 ">
+                                <div class="col-md-2 col-sm-2 ">
                                     @Html.EditorFor(model => model.numeroEmpleado, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required = "required" } })
                                     @Html.ValidationMessageFor(model => model.numeroEmpleado, "", new { @class = "text-danger" })
                                 </div>
-                                @Html.LabelFor(model => model.correo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                @Html.LabelFor(model => model.tipo_empleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-6 col-sm-6">
+                                    <div class="col-md-4 col-sm-4">
+                                        <input type="radio" id="tipo_empleado" name="tipo_empleado" value="@Bitacoras.Util.Empleados_tipo.EMPLEADO" @(Model != null && Model.tipo_empleado == Bitacoras.Util.Empleados_tipo.EMPLEADO ? "checked" : String.Empty) required>
+                                        <nolabel>
+                                            <label for="tipo_empleado">@Bitacoras.Util.Empleados_tipo.Descripcion(Bitacoras.Util.Empleados_tipo.EMPLEADO)</label>
+                                        </nolabel>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4">
+                                        <input type="radio" id="tipo_proveedor" name="tipo_empleado" value="@Bitacoras.Util.Empleados_tipo.PROVEEDOR" @(Model != null && Model.tipo_empleado == Bitacoras.Util.Empleados_tipo.PROVEEDOR ? "checked" : String.Empty)>
+                                        <nolabel>
+                                            <label for="tipo_proveedor">@Bitacoras.Util.Empleados_tipo.Descripcion(Bitacoras.Util.Empleados_tipo.PROVEEDOR)</label>
+                                        </nolabel>
+                                    </div>
+                                     <div class="col-md-4 col-sm-4">
+                                        <input type="radio" id="tipo_practicante" name="tipo_empleado" value="@Bitacoras.Util.Empleados_tipo.PRACTICANTE" @(Model != null && Model.tipo_empleado == Bitacoras.Util.Empleados_tipo.PRACTICANTE ? "checked" : String.Empty)>
+                                        <nolabel>
+                                            <label for="tipo_practicante">@Bitacoras.Util.Empleados_tipo.Descripcion(Bitacoras.Util.Empleados_tipo.PRACTICANTE)</label>
+                                        </nolabel>
+                                    </div>
+
+                                    @Html.ValidationMessageFor(model => model.tipo_empleado, "", new { @class = "text-danger" })
+                                </div>
+                                
+                                @*
+                                    --- OCULTO EN LA CREACION DE EMPLEADOS ---
+                                    @Html.LabelFor(model => model.correo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3">
                                     @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @readonly = "readonly" } })
                                     @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
@@ -91,7 +117,7 @@
                                 <div class="col-md-1 col-sm-1">
                                     @Html.EditorFor(model => model.C8ID, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @readonly = "readonly" } })
                                     @Html.ValidationMessageFor(model => model.C8ID, "", new { @class = "text-danger" })
-                                </div>
+                                </div>*@
                             </div>
 
                             <div class="item form-group">
@@ -259,6 +285,7 @@
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
     <script src="~/Content/vendors/multiselect_filter/jquery.bootstrap-duallistbox.js"></script>
+
 
 }
 
