--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Autorizar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Autorizar.cshtml
@@ -121,6 +121,8 @@
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.empleados.ingresoFecha)</dd>
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.empleados.nueva_fecha_nacimiento)</dt>
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.empleados.nueva_fecha_nacimiento)</dd>
+                                        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.empleados.tipo_empleado)</dt>
+                                        <dd class="col-sm-2">@Bitacoras.Util.Empleados_tipo.Descripcion(Model.empleados.tipo_empleado)</dd>
 
                                     </dl>
                                 </div>
@@ -220,7 +222,7 @@
                         @*SOFTWARE*@
                         <div class="form-group row">
 
-                            <div class="col-md-2 col-sm-2">
+                            @*<div class="col-md-2 col-sm-2">
                                 <div class="col-md-12 col-sm-12">
                                     <div class="checkbox">
                                         <label>
@@ -228,7 +230,7 @@
                                         </label>
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="col-md-2 col-sm-2">
                                 <div class="col-md-12 col-sm-12">
                                     <div class="checkbox">
