--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
@@ -55,6 +55,30 @@
                                 @Html.EditorFor(model => model.C8ID, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                             </div>
                         </div>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.tipo_empleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-6 col-sm-6">
+                                <div class="col-md-4 col-sm-4">
+                                    <input type="radio" id="tipo_empleado" name="tipo_empleado" value="@Bitacoras.Util.Empleados_tipo.EMPLEADO" @(Model != null && Model.tipo_empleado == Bitacoras.Util.Empleados_tipo.EMPLEADO ? "checked" : String.Empty) disabled>
+                                    <nolabel>
+                                        <label for="tipo_empleado">@Bitacoras.Util.Empleados_tipo.Descripcion(Bitacoras.Util.Empleados_tipo.EMPLEADO)</label>
+                                    </nolabel>
+                                </div>
+                                <div class="col-md-4 col-sm-4">
+                                    <input type="radio" id="tipo_proveedor" name="tipo_empleado" value="@Bitacoras.Util.Empleados_tipo.PROVEEDOR" @(Model != null && Model.tipo_empleado == Bitacoras.Util.Empleados_tipo.PROVEEDOR ? "checked" : String.Empty) disabled>
+                                    <nolabel>
+                                        <label for="tipo_proveedor">@Bitacoras.Util.Empleados_tipo.Descripcion(Bitacoras.Util.Empleados_tipo.PROVEEDOR)</label>
+                                    </nolabel>
+                                </div>
+                                <div class="col-md-4 col-sm-4">
+                                    <input type="radio" id="tipo_practicante" name="tipo_empleado" value="@Bitacoras.Util.Empleados_tipo.PRACTICANTE" @(Model != null && Model.tipo_empleado == Bitacoras.Util.Empleados_tipo.PRACTICANTE ? "checked" : String.Empty) disabled>
+                                    <nolabel>
+                                        <label for="tipo_practicante">@Bitacoras.Util.Empleados_tipo.Descripcion(Bitacoras.Util.Empleados_tipo.PRACTICANTE)</label>
+                                    </nolabel>
+                                </div>
+                            </div>
+
+                        </div>
 
                         <div class="item form-group">
                             @Html.LabelFor(model => model.nombre, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
@@ -108,10 +132,10 @@
                             @Html.LabelFor(model => model.id_jefe_directo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-3 col-sm-3">
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
-                            </div>                         
+                            </div>
                             @Html.LabelFor(model => model.shared_services, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                             <div class="col-md-1 col-sm-1">
-                                @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control", @disabled="disabled" } })
+                                @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                                 @Html.ValidationMessageFor(model => model.shared_services, "", new { @class = "text-danger" })
                             </div>
                         </div>
