--- a/CódigoFuente/BitacorasProduccion/Views/UsersAdmin/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/UsersAdmin/Index.cshtml
@@ -5,6 +5,7 @@
     ViewBag.PrimerNivel = "usuarios";
     ViewBag.SegundoNivel = "usuarios";
     ViewBag.ControllerName = "UsersAdmin";
+    ViewBag.nav_style = "nav-sm";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 }
@@ -118,6 +119,10 @@
                                             <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.Id})" class="btn btn-success btm-sm" title="Editar">
                                                 <i class="fa-regular fa-pen-to-square"></i>
                                             </a>
+                                            <a href="@Url.Action("EditEmail", ViewBag.ControllerName, new { id = item.Id})" class="btn btn-primary btm-sm" title="EditarEmail">
+                                                <i class="fa-solid fa-at"></i>
+                                            </a>
+
                                             <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.Id})" class="btn btn-info btm-sm" title="Detalles">
                                                 <i class="fa fa-info-circle"></i>
                                             </a>
