2023-09-14 Se agrega DL a menú de comedor.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -188,6 +188,7 @@
                                                 {
                                                     <h3>Men&uacute; Comedor</h3>
                                                     <li class="@(ViewBag.SegundoNivel == "RH_menu_comedor" ? "current-page" : null )"><a href="@Url.Action("Index", "RH_menu_comedor")">Actualizar Men&uacute;</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "RH_menu_comedor_dl" ? "current-page" : null )"><a href="@Url.Action("ListaDistribucion", "RH_menu_comedor")">Men&uacute; Comedor - DL</a></li>
                                                 }
                                             </ul>
                                         </li>
