--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Create.cshtml
@@ -103,16 +103,16 @@
                                         </div>
                                     </div>
                                 }
-                                
+
                                 @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.physical_server)))
                                 {
-                                <div class="form-group col-md-4">
-                                    @Html.LabelFor(model => model.physical_server, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                    <div class="col-md-9 col-sm-9 ">
-                                        @Html.DropDownList("physical_server", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
-                                        @Html.ValidationMessageFor(model => model.physical_server, "", new { @class = "text-danger" })
+                                    <div class="form-group col-md-4">
+                                        @Html.LabelFor(model => model.physical_server, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                        <div class="col-md-9 col-sm-9 ">
+                                            @Html.DropDownList("physical_server", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
+                                            @Html.ValidationMessageFor(model => model.physical_server, "", new { @class = "text-danger" })
+                                        </div>
                                     </div>
-                                </div>
                                 }
 
                                 @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.hostname)))
@@ -345,6 +345,120 @@
                             </div>
 
                             <div class="ln_solid"></div>
+                            if (type.descripcion == IT_Tipos_Hardware.DESKTOP || type.descripcion == IT_Tipos_Hardware.LAPTOP)
+                            {
+                                <div class="form-group row">
+                                    <span style="color:black"><b>MODERN WORKPLACE</b></span>
+                                </div>
+                                <div class="item form-group row">
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.last_check_int)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.last_check_int, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.last_check_int, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.last_check_int, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.os_version)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.os_version, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.os_version, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.os_version, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.primary_user)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.primary_user, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.primary_user, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.primary_user, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.primary_user_email)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.primary_user_email, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.primary_user_email, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.primary_user_email, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.primary_user_display)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.primary_user_display, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.primary_user_display, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.primary_user_display, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.compliance)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.compliance, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.compliance, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.compliance, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.managed_by)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.managed_by, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.managed_by, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.managed_by, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.encrypted)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.encrypted, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.encrypted, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.encrypted, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.joinType)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.joinType, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.joinType, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.joinType, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.management_certificate_expiration_date)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.management_certificate_expiration_date, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.management_certificate_expiration_date, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.management_certificate_expiration_date, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+
+                                    <div class="form-group row">
+                                    </div>
+                                </div>
+
+                                <div class="ln_solid"></div>
+                            }
+
                             if (type.descripcion == IT_Tipos_Hardware.DESKTOP || type.descripcion == IT_Tipos_Hardware.LAPTOP || type.descripcion == IT_Tipos_Hardware.SERVER)
                             {
                                 <div class="form-group row">
@@ -423,7 +537,7 @@
                                 <div class="item form-group">
                                     @Html.LabelFor(model => model.maintenance_period_months, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                     <div class="col-md-1 col-sm-1 ">
-                                        @Html.EditorFor(model => model.maintenance_period_months, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required="required" } })
+                                        @Html.EditorFor(model => model.maintenance_period_months, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required = "required" } })
                                         @Html.ValidationMessageFor(model => model.maintenance_period_months, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
