--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Edit.cshtml
@@ -337,6 +337,121 @@
                             </div>
 
                             <div class="ln_solid"></div>
+                            if (type.descripcion == IT_Tipos_Hardware.DESKTOP || type.descripcion == IT_Tipos_Hardware.LAPTOP)
+                            {
+                                <div class="form-group row">
+                                    <span style="color:black"><b>MODERN WORKPLACE</b></span>
+                                </div>
+                                <div class="item form-group row">
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.last_check_int)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.last_check_int, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.last_check_int, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.last_check_int, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.os_version)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.os_version, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.os_version, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.os_version, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.primary_user)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.primary_user, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.primary_user, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.primary_user, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.primary_user_email)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.primary_user_email, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.primary_user_email, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.primary_user_email, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.primary_user_display)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.primary_user_display, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.primary_user_display, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.primary_user_display, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.compliance)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.compliance, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.compliance, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.compliance, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.managed_by)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.managed_by, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.managed_by, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.managed_by, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.encrypted)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.encrypted, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.encrypted, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.encrypted, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.joinType)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.joinType, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.joinType, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.joinType, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+                                    @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.management_certificate_expiration_date)))
+                                    {
+                                        <div class="form-group col-md-4">
+                                            @Html.LabelFor(model => model.management_certificate_expiration_date, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                            <div class="col-md-9 col-sm-9 ">
+                                                @Html.EditorFor(model => model.management_certificate_expiration_date, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.management_certificate_expiration_date, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    }
+
+                                    <div class="form-group row">
+                                    </div>
+                                </div>
+
+                                <div class="ln_solid"></div>
+                            }
+
+
                             if (type.descripcion == IT_Tipos_Hardware.DESKTOP || type.descripcion == IT_Tipos_Hardware.LAPTOP || type.descripcion == IT_Tipos_Hardware.SERVER || type.descripcion == IT_Tipos_Hardware.VIRTUAL_SERVER)
                             {
                                 <div class="form-group row">
@@ -406,6 +521,8 @@
 
                                 <div class="ln_solid"></div>
                             }
+
+
                             if (type.descripcion == IT_Tipos_Hardware.DESKTOP || type.descripcion == IT_Tipos_Hardware.LAPTOP || type.descripcion == IT_Tipos_Hardware.SERVER)
                             {
                                 <div class="form-group row">
@@ -523,7 +640,7 @@
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
-<script>
+    <script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -747,6 +864,6 @@
         window.onload = function () {
             clicMenu(1);
         }
-</script>
+    </script>
 }
 
