--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
@@ -122,6 +122,19 @@
                                 @Html.ValidationMessageFor(model => model.sexo, "", new { @class = "text-danger" })
                             </div>
                         </div>
+
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.activo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-2 col-sm-2">
+                                <input type="text" class="form-control" value="@(Model.activo.HasValue && Model.activo.Value?"SÍ":"NO")" readonly />
+                            </div>
+                            @Html.LabelFor(model => model.bajaFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-2 col-sm-2">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.bajaFecha)" readonly />
+                            </div>
+
+                        </div>
+
                         <div class="ln_solid"></div>
 
                         <div class="form-group row">
